--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,6 @@
+machine:
+    services:
+        - postgresql
 dependencies:
     post:
         - sudo sudo apt-get update && sudo apt-get install postgresql-contrib-9.5 postgresql-9.5-plsh
