CI: test API calls

--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,8 @@ dependencies:
         - sudo service postgresql restart
         - wget https://github.com/begriffs/postgrest/releases/download/v0.3.2.0/postgrest-0.3.2.0-ubuntu.tar.xz
         - tar xf postgrest-0.3.2.0-ubuntu.tar.xz
-        - echo "~/postgrest postgres://apiuser:apiuserpwd@localhost:5432/test --pool=200 --anonymous=apiuser --port=3000 --jwt-secret notverysecret --max-rows=500 --schema=v1" > ~/postgrest-run.sh && chmod a+x ~/postgrest-run.sh 
+        - echo "~/postgrest postgres://apiuser:apiuserpwd@localhost:5432/test --pool=200 --anonymous=apiuser --port=3000 --jwt-secret notverysecret --max-rows=500 --schema=v1" > ~/postgrest-run.sh && chmod a+x ~/postgrest-run.sh
+        - npm install -g npm newman ava 
 database:
     override:
         - sudo -u postgres psql -c "create role apiuser password 'apiuserpwd';"
@@ -22,6 +23,8 @@ database:
 test:
     override:
         - ~/postgrest-google-translate/test/run.sh -f junit >$CIRCLE_TEST_REPORTS/junit.xml
+        - nc -z -v -w5 localhost 3000
+        - newman run ~/postgrest-google-translate/test/postman/postgrest-google-translate.postman_collection --bail -e ~/postgrest-google-translate/test/postman/local.postman_environment --reporter-junit-export $CIRCLE_TEST_REPORTS/newman.xml
         - sudo -u postgres psql test -v ON_ERROR_STOP=1 -f ~/postgrest-google-translate/uninstall_api.sql
         - sudo -u postgres psql test -v ON_ERROR_STOP=1 -f ~/postgrest-google-translate/uninstall_core.sql
 
