--- a/circle.yml
+++ b/circle.yml
@@ -6,8 +6,8 @@ dependencies:
         - sudo sudo apt-get update && sudo apt-get install postgresql-contrib-9.5 postgresql-9.5-plsh
         - sudo sh -c "echo \"port = 5432\" >> /etc/postgresql/9.5/main/postgresql.conf"
         - sudo service postgresql restart
-        - wget https://github.com/begriffs/postgrest/releases/download/v0.3.2.0/postgrest-0.3.2.0-ubuntu.tar.xz
-        - tar xf postgrest-0.3.2.0-ubuntu.tar.xz
+        - cd ~ && wget https://github.com/begriffs/postgrest/releases/download/v0.3.2.0/postgrest-0.3.2.0-ubuntu.tar.xz
+        - cd ~ && tar xf postgrest-0.3.2.0-ubuntu.tar.xz
         - echo "~/postgrest postgres://apiuser:apiuserpwd@localhost:5432/test --pool=200 --anonymous=apiuser --port=3000 --jwt-secret notverysecret --max-rows=500 --schema=v1" > ~/postgrest-run.sh && chmod a+x ~/postgrest-run.sh
         - npm install -g npm newman ava 
 database:
