--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,7 @@ dependencies:
         - npm install -g npm newman ava 
 database:
     override:
-        - sudo -u postgres psql -c "create role apiuser password 'apiuserpwd';"
+        - sudo -u postgres psql -c "create role apiuser password 'apiuserpwd' login;"
         - sudo -u postgres psql -c "create database test;"
         - sudo -u postgres psql -c "alter database test set google_translate.api_key = 'AIzaSyA84X5d-Okix0wV8FNmcHJCRntG_wFlKqY';"
         - sudo -u postgres psql test -c "create extension if not exists plsh;"
