--- a/setup-example.yml
+++ b/setup-example.yml
@@ -1,8 +1,7 @@
 ---
 :global:
   :use: true
-  :schema: translation_proxy
-  :table: cache
+  :database: translation_proxy
   :host: null
   :port: null
   :username: postgres
@@ -21,5 +20,3 @@
   :use: false
   :api_key_1: null
   :api_key_2: null
-  :begin_at: null
-  :end_at: null
