promt works on simple queries

--- a/setup-example.yml
+++ b/setup-example.yml
@@ -17,6 +17,7 @@
   :password: null
   :login_timeout: 30 minutes
   :server_url: https://pts.promt.com/pts/
+  :cookie_file: /tmp/promt_cookie.jar
 :bing:
   :use: false
   :api_key_1: null
