--- a/setup.yml
+++ b/setup.yml
@@ -17,6 +17,7 @@
   :password: Startupturb0
   :login_timeout: 30 minutes
   :server_url: http://pts.promt.com/pts/
+  :cookie_file: /tmp/promt_cookie.jar
 :bing:
   :use: false
   :api_key_1: 423b7e08e1ed498f88eb9cca12482c23
