--- a/setup-example.yml
+++ b/setup-example.yml
@@ -20,5 +20,5 @@
   :cookie_file: /tmp/promt_cookie.jar
 :bing:
   :use: false
-  :api_key_1: null
-  :api_key_2: null
+  :api_key: null
+  :token_expiration: 10 minutes
