we don't need ava

--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,7 @@ dependencies:
         - cd ~ && wget https://github.com/begriffs/postgrest/releases/download/v0.3.2.0/postgrest-0.3.2.0-ubuntu.tar.xz
         - cd ~ && tar xf postgrest-0.3.2.0-ubuntu.tar.xz
         - echo "~/postgrest postgres://apiuser:SOMEPASSWORD@localhost:5432/test --pool=200 --anonymous=apiuser --port=3000 --jwt-secret notverysecret --max-rows=500 --schema=v1" > ~/postgrest-run.sh && chmod a+x ~/postgrest-run.sh
-        - npm install -g npm newman ava 
+        - npm install -g npm newman 
 database:
     override:
         - sudo -u postgres psql -c "create role apiuser password 'SOMEPASSWORD' login;"
